--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
 	"workbench.colorCustomizations": {
 		"titleBar.activeBackground": "#212121",
-		"titleBar.border": "#CB3837",
+		"titleBar.border": "#B6B6B6",
 		"titleBar.activeForeground": "#F0F0F0",
 		"statusBar.background": "#212121",
-		"statusBar.border":"#CB3837",
+		"statusBar.border":"#B6B6B6",
 		"statusBar.foreground": "#F0F0F0",
-		"activityBar.activeBorder": "#CB3837",
+		"activityBar.activeBorder": "#B6B6B6",
 	},
 }
