--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@alessiofrittoli/node-module-starter",
-	"version": "0.2.0",
-	"description": "Basic Node Module repository",
+	"name": "@alessiofrittoli/http-server-status",
+	"version": "0.1.0",
+	"description": "HTTP Server Status TypeScript enumerators and default messages",
 	"author": {
 		"name": "Alessio Frittoli",
 		"email": "info@alessiofrittoli.it",
@@ -9,18 +9,16 @@
 	},
 	"license": "MIT",
 	"keywords": [
-		"nodejs",
-		"npm",
-		"node_modules"
+		"http-server-status"
 	],
-	"homepage": "https://github.com/alessiofrittoli/node-module-starter#readme",
+	"homepage": "https://github.com/alessiofrittoli/http-server-status#readme",
 	"bugs": {
-		"url": "https://github.com/alessiofrittoli/node-module-starter/issues",
+		"url": "https://github.com/alessiofrittoli/http-server-status/issues",
 		"email": "info@alessiofrittoli.it"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/alessiofrittoli/node-module-starter.git"
+		"url": "git+https://github.com/alessiofrittoli/http-server-status.git"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -28,16 +26,25 @@
 	"files": [
 		"dist"
 	],
+	"exports": {
+		".": {
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.js"
+		},
+		"./message": {
+			"types": "./dist/message.d.ts",
+			"import": "./dist/message.mjs",
+			"require": "./dist/message.js"
+		}
+	},
 	"sideEffects": false,
 	"scripts": {
-		"build": "eslint && pnpm test:ci && pnpm test:ci:jsdom && tsup",
+		"build": "eslint && pnpm test:ci && tsup",
 		"lint": "eslint",
 		"test": "jest --watchAll --verbose",
-		"test:jsdom": "JSDOM=true pnpm test",
 		"test:ci": "jest --ci --verbose",
-		"test:ci:jsdom": "JSDOM=true pnpm test:ci",
 		"test:jest": "pnpm test jest.test.ts",
-		"test:jest:jsdom": "JSDOM=true pnpm test:jest"
+		"test:statuses": "pnpm test statuses.test.ts"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
@@ -46,13 +53,13 @@
 		"@types/node": "^22.10.2",
 		"dotenv": "^16.4.7",
 		"eslint": "^9.17.0",
-		"globals": "^15.13.0",
+		"globals": "^15.14.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2",
 		"tsup": "^8.3.5",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.18.0"
+		"typescript-eslint": "^8.18.1"
 	}
 }
