--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"build": "pnpm lint && pnpm test:ci && tsup",
 		"build:watch": "tsup --watch",
 		"lint": "eslint",
+		"release": "node scripts/publish.js --verbose --npm",
 		"test": "pnpm test:watch",
 		"test:watch": "jest --watchAll --verbose",
 		"test:ci": "jest --ci --verbose",
@@ -54,6 +55,7 @@
 		"test:statuses": "pnpm test statuses.test.ts"
 	},
 	"devDependencies": {
+		"@alessiofrittoli/node-scripts": "^2.2.1",
 		"@eslint/js": "^9.17.0",
 		"@jest/globals": "^29.7.0",
 		"@types/jest": "^29.5.14",
