--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	],
 	"exports": {
 		".": {
+			"types": "./dist/index.d.ts",
 			"import": "./dist/index.mjs",
 			"require": "./dist/index.js"
 		},
@@ -39,27 +40,37 @@
 	},
 	"sideEffects": false,
 	"scripts": {
-		"build": "eslint && pnpm test:ci && tsup",
+		"build": "pnpm lint && pnpm test:ci && tsup",
+		"build:watch": "tsup --watch",
 		"lint": "eslint",
-		"test": "jest --watchAll --verbose",
+		"release": "node scripts/publish.js --verbose --npm",
+		"test": "pnpm test:watch",
+		"test:watch": "jest --watchAll --verbose",
 		"test:ci": "jest --ci --verbose",
-		"test:jest": "pnpm test jest.test.ts",
+		"test:coverage": "pnpm test:watch --coverage",
+		"test:ci:coverage": "pnpm test:ci --coverage",
+		"test:serve-coverage": "http-server ./coverage/lcov-report --gzip true -p 0 -o --silent",
+		"test:coverage:serve": "concurrently --prefix none --kill-others \"pnpm test:coverage\" \"pnpm test:serve-coverage\"",
+		"test:jest": "pnpm test:watch jest.test.ts",
 		"test:statuses": "pnpm test statuses.test.ts"
 	},
 	"devDependencies": {
+		"@alessiofrittoli/node-scripts": "^2.2.1",
 		"@eslint/js": "^9.17.0",
 		"@jest/globals": "^29.7.0",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.10.2",
+		"@types/node": "^22.10.3",
+		"concurrently": "^9.1.2",
 		"dotenv": "^16.4.7",
 		"eslint": "^9.17.0",
 		"globals": "^15.14.0",
+		"http-server": "^14.1.1",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2",
 		"tsup": "^8.3.5",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.18.1"
+		"typescript-eslint": "^8.19.0"
 	}
 }
