--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -6,6 +6,9 @@ jobs:
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
 
     - uses: actions/checkout@v4
@@ -23,7 +26,7 @@ jobs:
     - name: Run tests
       run: |
         pnpm test:ci:coverage
-
+    
     - name: Report to Coveralls
       uses: coverallsapp/github-action@v2
       with:
