--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,18 +8,23 @@
 		"declaration": true,
 		"isolatedModules": true,
 		"outDir": "dist",
-		"target": "ESNext",
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"target": "ES2020",
+		"lib": [ "dom", "dom.iterable", "esnext" ],
+		"allowJs": true,
+		"module": "ESNext",
+		"moduleResolution": "bundler",
 		"skipLibCheck": true,
 		"downlevelIteration": true,
 		"noUncheckedIndexedAccess": true,
 		"strictPropertyInitialization": false,
 		"resolveJsonModule": true,
+		"jsx": "preserve",
+		"incremental": true,
+		"tsBuildInfoFile": ".tsbuildinfo",
 		"paths": {
 			"@/*": [ "./src/*" ]
-		},
+		}
 	},
 	"include": [ "src", "__tests__" ],
-	"exclude": [ "node_modules" ]
+	"exclude": [ "node_modules", "dist" ]
 }
