--- a/package.json
+++ b/package.json
@@ -78,22 +78,27 @@
 		"test:statuses": "pnpm test:watch statuses.test.ts"
 	},
 	"devDependencies": {
-		"@alessiofrittoli/node-scripts": "^2.2.1",
-		"@eslint/js": "^9.17.0",
+		"@alessiofrittoli/node-scripts": "^2.3.1",
+		"@eslint/js": "^9.22.0",
 		"@jest/globals": "^29.7.0",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.10.3",
+		"@types/node": "^22.13.10",
 		"concurrently": "^9.1.2",
 		"dotenv": "^16.4.7",
-		"eslint": "^9.17.0",
-		"globals": "^15.14.0",
+		"eslint": "^9.22.0",
+		"globals": "^16.0.0",
 		"http-server": "^14.1.1",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
-		"ts-jest": "^29.2.5",
+		"ts-jest": "^29.2.6",
 		"ts-node": "^10.9.2",
-		"tsup": "^8.3.5",
-		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.19.0"
+		"tsup": "^8.4.0",
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.27.0"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
 	}
 }
